--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
   </nav>
 
   <body>
-
-    <a href="http://jquery.com/">jQuery</a>
+    <br>
+CURRENT TEMPERATURE
+    <!-- <a href="http://jquery.com/">jQuery</a> -->
     <script src="jquery.js"></script>
 
     <script>
