Minor CSS improvements

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript">
     function picture() {
       var pic =
-        "https://media3.giphy.com/media/rQ9ep0stA0oRG/giphy.gif?cid=ecf05e4702effe41b5bc778da8ae819d1bf820a6e408e90c&rid=giphy.gif"
+        "https://media.giphy.com/media/Ylx8ipBGlaPE4/giphy.gif"
       document.getElementById('chicken').style.display = 'block';
     }
     
@@ -38,9 +38,12 @@
   </style>
 
   <nav>
-    Temperature <button id="temp_up">Up</button> <button id="temp_down">Down</button>
-    <br>RESET<button id="reset">Reset</button>
-
+    Temperature <button id="temp_up">Up</button>
+    <br>
+    <br> 
+    Temperature <button id="temp_down">Down</button>
+    <br><button id="reset">Reset</button>
+    <br>
     <br>Power Saving Mode <label class="switch">
       <input type="checkbox" id="power_saving" onclick="picture()">
       <span class="slider round"></span>
@@ -98,22 +101,17 @@ CURRENT TEMPERATURE
     </script>
 
     <h1 id="temperature"></h1>
-    <br>temperature display (ideas: FLASHING EVERYWHERE, change the colour of the page based on the temp, CRAZY GIFS)
-    usage indicator
-    up button
-    down button
-    reset
-    power saving on/off
+    <br>
 
     <img id="chicken"
-      src="https://media3.giphy.com/media/rQ9ep0stA0oRG/giphy.gif?cid=ecf05e4702effe41b5bc778da8ae819d1bf820a6e408e90c&rid=giphy.gif"
+      src="https://media.giphy.com/media/Ylx8ipBGlaPE4/giphy.gif"
       style="display:none;" />
 
   </body>
 
 </section>
 <footer>
-
+A MATTYBWOY CREATION
 </footer>
 
 </html>
