Button colour changes upon hover

--- a/index.html
+++ b/index.html
@@ -31,12 +31,6 @@
     <h1 class="rainbow-text">WELCOME TO MR THERMOSTAT</h1>
   </header>
 
-  <style>
-    input[type=button] {
-      font-family: monospace;
-    }
-  </style>
-
   <nav>
     Temperature <button id="temp_up">Up</button>
     <br>
@@ -52,7 +46,7 @@
 
   <body>
     <br>
-CURRENT TEMPERATURE
+    <h2>CURRENT TEMPERATURE</h2>
     <!-- <a href="http://jquery.com/">jQuery</a> -->
     <script src="jquery.js"></script>
 
